2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Add release related Makefile rules.
	* announce-gen.mk: New.
	* dist-sign.mk: Copy from sf.mk.
	* sf-doc.mk: Copy from sf.mk.
	* sf-release.mk: Rename from sf.mk.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file generation rule.
	* rpm.mk: Here.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Update rpm.mk to handle generated spec file.
	* rpm.mk: Update copyright and handle generated
	spec file.

2009-11-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix git-version-gen rpmbuild incompatibility.
	* git-version-gen: Replace dashes by points in version
	number so that rpmbuild do not complain anymore that
	generated version number is invalid.

2009-11-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Regenerate the ``.pc'' file if package configuration changes.
	* pkg-config.mk: Make the ``.pc'' file depends on
	``config.status''.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle doxygendocdir in jrl-pkg-config.
	* jrl-pkg-config.m4: Search for Doxygen documentation.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Doxygen generation rule.
	* doxygen.mk: Doxygen extra distributed files should
	be copied in doxygen-html, not Doxygen dependencies!

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Reduce Doxygen documentation dependencies.
	* doxygen/doxygen-deps.sh: Sort and remove duplicated
	dependencies.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add rules for Libtool and recursive documentation generation.
	* doc-recursive.mk: New.
	* libtool.mk: New.

2009-10-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove useless code.
	* pkg-config.mk: Here.

2009-10-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Add hooks to allow the copy of additional files in Doxygen directory.
	* doxygen.mk: Here.

2009-10-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix doxygen.mk to avoid disallowing valid patterns.